--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,9 +9,8 @@ jobs:
     steps:
     - uses: actions/checkout@v1
       name: Checkout
-    - uses: Ahuge/black-action@v1.0.2
-      env:
-        BLACK_ARGS: "."
+    - uses: psf/black@master
+      run: black
     - name: Commit changes
       uses: EndBug/add-and-commit@v4
       with:
