trigger on push to non-master, ignore changes to CI config
Signed-off-by: Daniel Hill <dan@mamu.co>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,6 +1,16 @@
 name: Perform Python Format
 
-on: pull_request
+on:
+  pull_request:
+    paths-ignore:
+      - '.circleci/**'
+      - '.github/workflows/**'
+  push:
+    paths-ignore:
+      - '.circleci/**'
+      - '.github/workflows/**'
+    branches-ignore:
+      - master
 
 jobs:
   build:
