--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,17 +10,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
+
       - name: Set up Python 3.7
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
+
       - name: Install Black
         run: pip install black
+
       - name: Run black --check .
+        id: check-formatting
         run: black --check .
+        continue-on-error: true
+
       - name: If needed, commit black changes to the pull request
-        if: failure()
+        if: ${{ steps.check-formatting.outcome == 'failure' }}
         run: |
           black .
           git config --global user.name ${{ secrets.CI_GITHUB_USERNAME }}
