--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -3,7 +3,6 @@ name: Perform Python Format
 on:
   pull_request:
     paths-ignore:
-      - '.circleci/**'
       - '.github/workflows/**'
 
 jobs:
@@ -17,6 +16,11 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
+      # Commented out as Snyk license issue and one unfixable vulnerabilty
+      # - name: Run Snyk to check for vulnerabilities
+      #   uses: snyk/actions/python-3.7@master
+      #   env:
+      #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
       - name: Install Black
         run: pip install black
